--- a/worldexplorer/package.json
+++ b/worldexplorer/package.json
@@ -18,6 +18,8 @@
   "author": "dSebastien <seb@dsebastien.net> (https://www.dsebastien.net)",
   "license": "MIT",
   "dependencies": {
+    "@types/chart.js": "^2.9.34",
+    "chart.js": "^3.5.0",
     "io-ts": "1.4.2"
   }
 }
